--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,25 +4,25 @@
 
 @layer base {
   :root {
-    --background: 140 10% 90%;
+    --background: 130 10% 96%; /* #e4e8e5 */
     --foreground: 20 14.3% 4.1%;
-    --card: 0 0% 100%;
+    --card: 130 10% 98%;
     --card-foreground: 20 14.3% 4.1%;
     --popover: 0 0% 100%;
     --popover-foreground: 20 14.3% 4.1%;
-    --primary: 134 30% 30%;
+    --primary: 145 28% 31%; /* #386641 */
     --primary-foreground: 0 0% 98%;
     --secondary: 20 4.9% 95.9%;
     --secondary-foreground: 20 14.3% 4.1%;
     --muted: 20 4.9% 95.9%;
     --muted-foreground: 20 8.9% 45.1%;
-    --accent: 43 100% 67%;
+    --accent: 42 100% 67%; /* #ffc857 */
     --accent-foreground: 43 100% 10%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
-    --border: 134 10% 70%;
-    --input: 134 10% 75%;
-    --ring: 134 30% 30%;
+    --border: 145 10% 70%;
+    --input: 145 10% 75%;
+    --ring: 145 28% 31%;
     --radius: 0.5rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
@@ -38,19 +38,19 @@
     --card-foreground: 0 0% 98%;
     --popover: 20 14.3% 4.1%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 20 14.3% 4.1%;
+    --primary: 145 28% 71%;
+    --primary-foreground: 145 30% 10%;
     --secondary: 12 6.5% 15.1%;
     --secondary-foreground: 0 0% 98%;
     --muted: 12 6.5% 15.1%;
     --muted-foreground: 24 5.4% 63.9%;
-    --accent: 12 6.5% 15.1%;
-    --accent-foreground: 0 0% 98%;
+    --accent: 42 100% 57%;
+    --accent-foreground: 43 100% 5%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
-    --ring: 346.8 77.2% 49.8%;
+    --ring: 145 28% 71%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
